--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="js/jasmine/lib/jasmine-2.5.2/jasmine.js" defer></script>
-    <script src="js/jasmine/lib/jasmine-2.5.2/jasmine-html.js" defer></script>
-    <script src="js/jasmine/lib/jasmine-2.5.2/boot.js" defer></script>
+    <!-- jasmine -->
+    <script src="js/jasmine/lib/jasmine-2.5.2/jasmine.js"></script>
+    <script src="js/jasmine/lib/jasmine-2.5.2/jasmine-html.js"></script>
+    <script src="js/jasmine/lib/jasmine-2.5.2/boot.js"></script>
     <link rel="stylesheet" href="js/jasmine/lib/jasmine-2.5.2/jasmine.css">
 
+    <!-- chai -->
+    <script src="js/chai/chai.js"></script>
+
+    <!-- sources -->
     <script src="js/script.js" defer></script>
 
+    <!-- specifications -->
     <script src="js/script.spec.js" defer></script>
 </head>
 <body>
