lesson02: add flex

--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -12,6 +12,29 @@
     <div class="block">
 
     </div>
+
+    <ol>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Alias animi architecto explicabo temporibus.</li>
+        <li>Nam quis suscipit tempore voluptates!
+            <ol>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Alias animi architecto explicabo temporibus.</li>
+                <li>Nam quis suscipit tempore voluptates!</li>
+                <li>Enim iusto porro quidem ut.</li>
+                <li>Autem porro possimus quia vero?</li>
+            </ol>
+        </li>
+        <li>Enim iusto porro quidem ut.</li>
+        <li>Autem porro possimus quia vero?</li>
+    </ol>
+
+
+    <div class="flex">
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+    </div>
 </div>
 
 </body>
