add audio/video, sets and stylesheets

--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -18,5 +18,30 @@
     </div>
 </form>
 
+
+
+
+<p>Lorem ipsum dolor sit amet.</p>
+
+<style class="styles">
+    p {
+        color: steelblue;
+    }
+</style>
+
+
+<!--<audio src="song.mp3"></audio>
+
+<audio src="song.mp3">
+    <source src="song.ogg" type="audio/ogg">
+    <source src="song.mp3" type="audio/mp3">
+</audio>
+
+<audio src="song.mp3" autoplay loop controls preload></audio>
+
+<video src="video.mp4" poster="star.png"></video>-->
+
+
+
 </body>
 </html>
