--- a/lesson18/index.html
+++ b/lesson18/index.html
@@ -14,7 +14,7 @@
 
 <div class="wrapper" ng-class="{'app-loaded': true}">
 
-    <!--<div>
+    <div>
         <p>
             5 + 3 = {{ 5 + 3 }}
         </p>
@@ -35,7 +35,7 @@
         <p title="5">
             some text
         </p>
-    </div>-->
+    </div>
 
 
     <!--<div ng-controller="StoreController as store">
@@ -57,14 +57,32 @@
     </div>-->
 
 
-    <div ng-controller="StoreController as store">
-        <div ng-repeat="product in store.products">
-            <h1>{{ product.name }}</h1>
+    <!--<div ng-controller="StoreController as store">
+        <div ng-repeat-start="product in store.products">
+            <h1>{{ $index }}. {{ product.name }}</h1>
             <h2>${{ product.price }}</h2>
             <p>{{ product.description }}</p>
             <button ng-show="product.canPurchase">Get one</button>
         </div>
-    </div>
+        <hr ng-repeat-end ng-hide="$last"/>
+    </div>-->
+
+
+    <!--<div ng-controller="StoreController as store">
+        <div ng-repeat-start="product in store.products | orderBy:'-price'">
+            <h1>{{ product.name }}</h1>
+            <h2>{{ product.price | currency }}</h2>
+
+            <p>{{ 1437307530159 | date:'dd/MM/yyyy @ hh:mm' }}</p>
+            <p>{{ 'Some text' | uppercase }}</p>
+            <p>{{ 'Some description' | limitTo:8 }}</p>
+            <div ng-repeat="product in store.products | limitTo:3"></div>
+            <div ng-repeat="product in store.products | orderBy:'-price'"></div>
+
+            <button ng-show="product.canPurchase">Get one</button>
+        </div>
+        <hr ng-repeat-end ng-hide="$last"/>
+    </div>-->
 
 
 
