--- a/lesson18/index.html
+++ b/lesson18/index.html
@@ -68,6 +68,14 @@
     </div>-->
 
 
+
+
+
+
+
+
+    <!-- part 2 -->
+
     <!--<div ng-controller="StoreController as store">
         <div ng-repeat-start="product in store.products | orderBy:'-price'">
             <h1>{{ product.name }}</h1>
