--- a/lesson19/index.html
+++ b/lesson19/index.html
@@ -30,6 +30,10 @@
     </div>
 
 
+
+
+
+
     <!--<div ng-controller="StoreController as store">
         <div ng-repeat="product in store.products | orderBy:'-price'">
             <h1>{{ product.name }}</h1>
@@ -48,6 +52,32 @@
             {{ number }}
         </div>
     </div>-->
+
+
+
+    <!--<div ng-controller="StoreController as store">
+
+        {{ store.name }}<br/>
+        {{ store.bigName }}<hr/>
+        {{ store.date }}
+
+    </div>-->
+
+
+
+    <!--<div ng-controller="StoreController as store">
+
+        {{ 5 | double }}<br/>
+        {{ 5 | double:true }}<br/>
+
+    </div>-->
+
+
+
+
+
+
+
 
 
 
