--- a/lesson19/index.html
+++ b/lesson19/index.html
@@ -65,7 +65,10 @@
 
 
 
-    <!--<div ng-controller="StoreController as store">
+
+
+    <!-- no ng-controller -->
+    <!--<div>
 
         {{ 5 | double }}<br/>
         {{ 5 | double:true }}<br/>
