--- a/lesson20/index.html
+++ b/lesson20/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My angular app</title>
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"/>-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="src/main.css"/>
 
