--- a/lesson23/index.html
+++ b/lesson23/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <title>My angular app</title>
 
-    <base href="/"/>
+    <!--<base href="/"/>-->
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="src/main.css"/>
 
     <script src="node_modules/angular/angular.js" defer></script>
     <script src="node_modules/angular-route/angular-route.js" defer></script>
-    <script src="node_modules/chance/chance.js" defer></script>
     <script src="src/main.js" defer></script>
 </head>
 <body>
