--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -4,99 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <link rel="stylesheet" href="styles.css"/>
+
     <script src="script.js" defer></script>
 </head>
 <body>
 
 <div>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id iusto libero nobis nostrum provident quasi ratione repellendus voluptatibus! Assumenda autem dolores eos est itaque libero non quis
-        repellat velit voluptatem.</p>
-
-    <p>Autem blanditiis dolorem dolores eum fuga quisquam veritatis? Ab consequatur distinctio officia! A adipisci aperiam, consequatur, deleniti eligendi enim iure laudantium omnis provident quos rem
-        sed tempore tenetur ut, vel.</p>
-
-    <p>Accusantium ad adipisci atque blanditiis corporis culpa cum distinctio ducimus ea eius enim excepturi fugiat hic illo itaque iure natus, nostrum nulla, pariatur placeat quidem quo reiciendis
-        tempore velit vero!</p>
-
-    <p>A cum dolore eos eum, facilis quod recusandae totam! Accusantium adipisci alias amet animi aperiam architecto at, aut deleniti eum incidunt magnam necessitatibus nulla officiis sint suscipit ut
-        veritatis, vero.</p>
-
-    <p>Doloribus itaque iusto, obcaecati officia officiis veritatis. Aspernatur aut error fugit harum illum minus modi mollitia rem saepe vitae voluptas, voluptatibus? Adipisci autem debitis eos fuga
-        in nulla sunt veniam.</p>
-    <button>Lorem.</button>
-    <h2>Dolor minus nesciunt sequi vitae.</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis dignissimos, earum eveniet, facilis harum ipsa iste modi molestias nam nesciunt nobis nulla odit ullam voluptas
-        voluptate voluptatem voluptates voluptatum?</p>
-
-    <p>Amet at distinctio in, iusto repellendus sit vel voluptas? Animi atque beatae cum cumque doloremque earum eveniet illo iste, labore nam quod quos repellat repellendus sint tempore voluptas
-        voluptate voluptatibus.</p>
-
-    <p>A aspernatur harum illum quasi rem repellendus sequi unde? Ad dolore dolores dolorum est explicabo ipsa laborum libero maxime molestias nobis praesentium ratione tempore, ullam ut vel velit
-        vitae voluptas.</p>
-
-    <p>Alias, aliquid assumenda distinctio doloribus expedita facilis hic laborum magnam magni, mollitia natus nemo porro quae quidem quo quos rerum vitae. Excepturi, facere ipsa modi nemo quae
-        reprehenderit sapiente veniam.</p>
-
-    <p>A ab ad atque ea et facilis id ipsa iure magni nisi numquam obcaecati omnis quibusdam repellat repellendus, sequi ullam velit voluptas. Accusantium doloremque est impedit modi necessitatibus
-        rem, sit!</p>
-    <button>Inventore!</button>
-    <h2>Ad est illum laboriosam odio.</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet aut cupiditate dignissimos dolorem doloribus eligendi excepturi explicabo fugiat hic iste modi, quasi, tempora totam velit
-        veniam voluptatum. Atque, est.</p>
-
-    <p>A deleniti ducimus ea earum esse est facere, impedit maiores neque, porro sit suscipit veniam voluptatibus? Consequuntur est iste laborum non? Eius facilis modi quam. Ipsum labore nulla quasi
-        reiciendis.</p>
-
-    <p>Amet aperiam architecto, aspernatur corporis, earum eius eligendi esse explicabo facere hic laboriosam maiores minima nam saepe sunt, totam veritatis. A accusantium blanditiis commodi inventore
-        ipsam iusto odit optio possimus.</p>
-
-    <p>Animi assumenda dolorem facere neque officiis praesentium quibusdam, veritatis vitae voluptatem. Blanditiis ea esse est libero nesciunt odio repellendus. Ad aut dignissimos eaque modi nam natus
-        nostrum quidem suscipit! Placeat.</p>
-
-    <p>Ab at dolorem, ex exercitationem illum pariatur ratione repellat tempora? Ab asperiores dicta eligendi enim eos facilis fugiat, impedit incidunt nam neque nisi non perspiciatis repudiandae
-        sapiente temporibus ullam ut?</p>
-    <button>Voluptas.</button>
-    <h2>Aliquid at aut dolor eveniet!</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus cum cumque error est explicabo, laudantium libero, minus, nulla optio quia sapiente voluptatum? Autem doloribus eaque eos hic
-        rerum soluta voluptatem!</p>
-
-    <p>Assumenda consequatur eum illo nulla optio repellendus sunt suscipit voluptates. Accusantium atque commodi, deserunt est ipsa ipsam laboriosam libero quia quidem totam. Aperiam commodi delectus
-        ea earum neque? Deserunt, quibusdam!</p>
-
-    <p>Corporis debitis, dignissimos dolores facere laboriosam quaerat vel! Ab cum dignissimos, eius id officiis omnis quam ratione temporibus totam. Incidunt maxime placeat quidem quo repellat
-        suscipit veritatis? Deserunt dolor, veniam!</p>
-
-    <p>Alias aperiam blanditiis debitis deleniti ducimus ea eaque est exercitationem explicabo incidunt iste itaque, laboriosam laudantium minima, modi nesciunt perspiciatis praesentium quaerat quam
-        qui repellat sapiente unde velit voluptate voluptatum!</p>
-
-    <p>Animi eos expedita, natus nemo neque nobis rem. Accusamus, adipisci aliquam aperiam ducimus, eos facilis impedit ipsa ipsum laudantium minus necessitatibus non praesentium quaerat quidem quo
-        quod rem ullam voluptate!</p>
-    <button>Delectus?</button>
-    <h2>Aliquid est fugit nobis tempore.</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta eius inventore labore officia pariatur qui quisquam sed suscipit tempora? Ab accusamus deserunt dolor eos expedita minus
-        nam porro, tenetur.</p>
-
-    <p>Alias amet beatae blanditiis cumque delectus dignissimos dolorum eos et excepturi facilis fugit id iusto minus nulla, numquam, officiis placeat quos recusandae repellendus repudiandae saepe
-        sint, tenetur unde velit vitae.</p>
-
-    <p>Autem, consequuntur delectus ea odio quae soluta! Consectetur corporis ex explicabo facilis, fugit impedit ipsum laboriosam natus nemo neque officia placeat quos ratione veritatis, voluptatum!
-        Adipisci enim eveniet tempora tempore?</p>
-
-    <p>Aliquam autem beatae consequuntur corporis dolores eius enim excepturi explicabo fuga itaque labore magni molestias odit pariatur possimus quas rem repellat repudiandae rerum sint, tempora
-        voluptates voluptatibus voluptatum! Eligendi, quidem?</p>
-
-    <p>Accusantium corporis deserunt, eaque est maiores natus quaerat quam temporibus? Accusamus ea expedita illum impedit odio quasi qui quisquam! Accusamus accusantium ad dolor dolores fugiat fugit
-        itaque libero modi voluptatum!</p>
-    <button>Sit!</button>
-    <br/>
-    <button>Lorem.</button>
+    <!--((h2>lorem5)+((p>lorem100)*4)+button>lorem1)*5-->
 </div>
+
+
+<div class="b b1">
+    <div class="b b2"></div>
+</div>
+
 
 </body>
 </html>
