--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="site.mf">
+<html lang="en"> <!-- manifest="site.mf" -->
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
